app/ecommerce/components/home/_infographic.scss
@use '../../scss/ecommerceStyles' as m;
@use '/app/base/sass/util/functions' as f;

.infographic {
  position: relative;
  display: flex;
  gap: var(--ec-gap);
  height: calc(100svh - 11rem);
  padding: 0 var(--ec-section-x-padding) calc(f.rem(32) + var(--ec-section-y-padding)) var(--ec-section-x-padding);
  @media (width <= 650px) {
    height: auto;
    min-height: 520px;
    padding: 0 var(--ec-section-x-padding) var(--ec-section-y-padding) var(--ec-section-x-padding);
  }
  &:after {
    @include m.homeSectionAfter;
  }
  & > * {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: var(--ec-gap);
    border-bottom-right-radius: var(--ec-border-radius);
    border-bottom-left-radius: var(--ec-border-radius);
    overflow: clip;
    &:nth-child(1) {
      flex: 0 1 30%;
    }
    &:nth-child(2) {
      flex: 0 1 40%;
    }
    &:nth-child(3) {
      flex: 0 1 30%;
    }
    @media (width <= 1300px) {
      flex: 0 1 50%;
    }
  }
  & figure {
    height: 100%;
    border-radius: var(--ec-border-radius);
    overflow: clip;
    & picture,
    picture img {
      width: auto;
      height: 100%;
    }
  }
}

.infographic__primary {
  @media (width < 800px) {
    flex: 1 0 100%;
    position: relative;
    display: grid;
    place-items: center;
    & > * {
      position: absolute;
    }
  }
  @media (width <= 650px) {
    border-radius: var(--ec-border-radius);
    overflow: clip;
  }
  &__article {
    @media (width < 800px) {
      z-index: 1;
      color: white;
      &__strong {
        display: grid;
        place-items: center;
      }
    }
    &__strong {
      @include m.ecoSectionHeader;
      @media (width < 800px) {
        padding-bottom: 12px;
      }
      @media (width <= 650px) {
        font-size: clamp(f.rem(16), f.rem(18) + 8vw, 2.2rem);
      }
    }
    &__heading {
      font-size: clamp(f.rem(16), f.rem(12) + 1vw, f.rem(18));
      font-weight: 500;
      @media (width < 800px) {
        max-width: 36ch;
        padding: 0 f.rem(24);
        text-align: center;
      }
    }
  }
  &__graphic {
    @media (width < 800px) {
      filter: blur(2px) saturate(50%);
    }
  }
}

.infographic__supporting {
  @media (width <= 1300px) {
    display: none;
  }
}

.infographic__cta {
  @media (width < 800px) {
    display: none;
  }
  &__article {
    & h2 {
      @include m.ecoSectionHeader;
    }
    & p {
      padding-bottom: 12px;
    }
    & a {
      @include m.ecoBtn;
      @include m.ecoBtnDark;
    }
  }
}

